dashboard/public/styles/displayLogs.css
/*
// Copyright 2017, RadiantBlue Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
*/

#logs_container{
	position: fixed;
	top: 0px;
	left: 0px;
	overflow: auto;
}
#logs_container.show{
	width: 100%;
	height: 100%;
	z-index: 101;
}
#logs_container.hide{
	z-index: 0;
}
#logs{
	width:100%;
	z-index: 100;
}
#logs_header{
	margin-left: auto;
	margin-right: auto;
	height:40px;
	width: 600px;
	position: relative;
	text-align: center;
	bottom: -5px;
	z-index: 103;
}
#logs_header button{
	height: 100%;
	width: 100%;
	font-size:16px;
	font-style:bold;
}
#logs_body{
	margin-left: 7.5%;
	margin-right: 7.5%;
	width: 85%;
	position: absolute;
	border: 1px solid black;
	border-bottom: 0px;
	border-top-left-radius: 5px;
	border-top-right-radius: 5px;
	background: white;
	z-index: 102;
}
#logs_toolbar{
	padding-top: 10px;
	padding-bottom: 10px;
	width: 100%;
	background-color: rgba(255,165,0,0.5);
	display: table;
	border-top-left-radius: 5px;
	border-top-right-radius: 5px;
}
.log_message{
	padding-top: 10px;
	padding-bottom: 10px;
	display: table;
	cursor: pointer;
	width: 100%;
}
.log_message:nth-child(even) {
	background: rgb(224,224,224);
}
.log_message:hover{
	background: rgba(255,165,0,0.5);
}
.log_message_child{
	padding-left: 10px;
}
.log_message_child.log_closed{
	display: inline-block;
}
.log_message_child.log_open{
	display: block;
	margin-bottom: 5px;
	width: 100%;
}
.expandArrow{
	display:table-cell;
	vertical-align:middle;
	cursor: pointer;
	padding-left: 10px;
	padding-right: 15px;
	font-size: 14px;
	width: 5px;
}
#log_list{
	padding-right: 0px;
	padding-left: 0px;
	margin-top: 5px
}
#overlaydiv{
	position:fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	display: none;
	background: rgba(0, 0, 0, 0.5);
}
#overlaydiv.show{
	z-index: 50;
	display: block;
}
#overlaydiv.hide{
	z-index: -99;
}
.chevron:before {
	border-style: solid;
	border-width: 0.25em 0.25em 0 0;
	content: '';
	display: inline-block;
	height: 0.35em;
	left: 0.25em;
	position: relative;
	top: 0.30em;
	transform: rotate(-45deg);
	vertical-align: top;
	width: 0.35em;
}
.chevron.chevron_bottom:before {
	top: 0.15em;
	transform: rotate(135deg);
}
.open {
	top: 10%;
	min-height: 90%;
	position: absolute;
}
.open #logs_body{
	display: block;
	min-height: calc(100% - 41px);
}
.closed {
	position: fixed;
	bottom: -2px;
}
.closed #logs_body{
	display: none;
}
.logs_pagination_controllers{
	font-size: 30px;
	padding-right: 10px;
	padding-left: 10px;
	padding-bottom: 5px;
}
#logs_pagination{
	width: 250px;
}
#logs_pagination span{
	display: table-cell;
	vertical-align: middle;
}
.logs_pagination_active{
	color: black;
	cursor: pointer;
}
.logs_pagination_unactive{
	color: 	rgb(128,128,128);
}
.logs_toolbar_item{
	padding-right: 10px;
	display: table-cell;
	vertical-align: middle;
}
#logs_count_input{
	margin-left: 10px;
	padding-left: 5px;
	width: 50px;
}
#logs_count_button{
	padding-top: 2px;
	padding-bottom: 2px;
}

